--- a/www/templates/index.html
+++ b/www/templates/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>GCC-SFSP</title>
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="{{ url_for('static',filename='assets/icon/favicon.ico') }}" type="image/x-icon">
+    <link rel="icon" href="{{ url_for('static',filename='assets/icon/favicon.ico') }}" type="image/x-icon">
     <!-- MaterializeCSS -->
     <link rel="stylesheet" href="{{ url_for('static',filename='assets/css/materializecss.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static',filename='assets/css/style.css')}}">
@@ -65,7 +68,9 @@
             </div>
             <div class="row">
               <div class="col s12">
-                  <button class="waves-effect waves-light btn-large" type="submit">Login</button>
+                <button class="btn waves-effect waves-light" type="submit" name="action">Login
+                  <i class="material-icons right">send</i>
+                </button>
               </div>
             </div>
           </form>
