--- a/www/templates/index.html
+++ b/www/templates/index.html
@@ -37,47 +37,46 @@
     <ul class="sidenav" id="mobile-demo">
       <!-- <li><a href="/windash">Windows Dashboard <i class="material-icons right">developer_board</i></a></li> -->
     </ul>
-    <div class="container">
-      <div class="row">
-        <div class="col s4"></div>
-        <div class="col s4">
-          <form class="col s12" method="POST" action="/login">
-            <div class="row">
-              <div class="col s12 center">
-                  <!-- <img src="{{ url_for('static',filename='assets/img/gcclogo.png') }}" alt="" style="height: 150px; width: 150px;" class="cirlcle responsive"> -->
+    <main>
+      <br>
+      <center>
+      <div class="container">
+        <div class="z-depth-1 grey lighten-4 row" style="display: inline-block; padding: 32px 48px 0px 48px; border: 1px solid #EEE;">
+          <form class="col s12" method="post" action="/login">
+            <div class='row'>
+              <div class='col s12'>
+                <h3 class="green-text"><i class="green-text medium material-icons left">account_box</i></h3>
               </div>
             </div>
-            <div class="row">
-                {% if status %}
-                <div class="card-panel red white-text">
-                  {{status}}<i class="material-icons right">warning</i>
-                </div>
-                {% endif %}
-            </div>
-            <div class="row">
-              <div class="input-field col s12">
-                <input id="text" type="text" class="validate" name='uname'>
-                <label for="text">Username</label>
+
+            <div class='row'>
+              <div class='input-field col s12'>
+                <input class='validate' type='email' name='email' id='email' />
+                <label for='email'>Email</label>
               </div>
             </div>
-            <div class="row">
-              <div class="input-field col s12">
-                <input id="password" type="password" class="validate" name='passwd'>
-                <label for="password">Password</label>
+
+            <div class='row'>
+              <div class='input-field col s12'>
+                <input class='validate'  type='password' name='pass' id='password' />
+                <label for='password'>Password</label>
               </div>
+              <label style='float: right;'>
+								<a class='pink-text' href='#!'><b>Forgot Password?</b></a>
+							</label>
             </div>
-            <div class="row">
-              <div class="col s12">
-                <button class="btn waves-effect waves-light" type="submit" name="action">Login
-                  <i class="material-icons right">send</i>
-                </button>
+
+            <br />
+            <center>
+              <div class='row'>
+                <button type='submit' name='btn_login' class='col s12 btn btn-large waves-effect green'>Login</button>
               </div>
-            </div>
+            </center>
           </form>
-          </div>
-          <div class="col s4"></div>
         </div>
-    </div>
+      </div>
+      </center>
+    </main>
     <footer class="page-footer green">
       <div class="container">
         <div class="row">
