--- a/www/templates/admin.html
+++ b/www/templates/admin.html
@@ -60,15 +60,20 @@
             <li><a href="/admin_users" class="white-text">User Accounts <i class="material-icons right white-text">supervisor_account</i></a></li>
             <li><a href="/admin_staff" class="white-text">Staff <i class="material-icons right white-text">assignment_ind</i></a></li>
             <li><a href="/admin_dept" class="white-text">Department <i class="material-icons right white-text">business</i></a></li>
-            <li><a href="/admin_win" class="white-text">Windows <i class="material-icons right white-text">developer_board</i></a></li>
-            <li><a href="/admin_purp" class="white-text">Purposes <i class="material-icons right white-text">speaker_notes</i></a></li>
             <li><a href="/admin_sett" class="white-text">Settings <i class="material-icons right white-text">settings</i></a></li>
             <li><a href="/logout" class="white-text">Logout<i class="material-icons right white-text">logout</i></a></li>
         </ul>
         
     </header>
     <main>
-        
+      <div class="row">
+        <div class="col s4">
+          <canvas id="chartData" width="100" height="100"></canvas>
+        </div>
+        <div class="col s4">
+          <canvas id="chartData2" width="100" height="100"></canvas>
+        </div>
+      </div>
     </main>
     <footer>
 
@@ -98,25 +103,19 @@
     })
     // EndSideNav
     M.AutoInit();
-    var datas = document.querySelector("#datas").value;
-    var obj = JSON.parse(datas);
-    var labelz = [];
-    var totalz = [];
-    for(var i = 0;i<obj.length;i++){
-      labelz.push(obj[i].qMonth);
-      totalz.push(obj[i].qTotal);
-    }
-
-    var ctx = document.querySelector('#myChart').getContext('2d');
-    var myChart1 = new Chart(ctx, {
+    
+    // ChartJS //
+    var ctx = document.querySelector('#chartData').getContext('2d');
+    var ctx2 = document.querySelector('#chartData2').getContext('2d');
+    var config = {
       type: 'bar',
       data: {
-          labels: labelz,
+          labels: ['BSIT','BSBA','BSOA','BSCRIM'],
           datasets: [{
-              label: "Monthly Reports",
-              data: totalz,
-              backgroundColor: '#00796b',
-              borderColor: '#00796b'
+              label: "Staff",
+              data: [10,20,30,40],
+              backgroundColor: '#1976d2',
+              borderColor: '#1976d2'
           }]
       },
       options: {
@@ -128,56 +127,14 @@
               }]
           }
       }
+    };
+    var myChart = new Chart(ctx,config);
+    var myChart2 = new Chart(ctx2,config);
+    myChart.update({
+      duration: 800,
+      easing: 'easeOutBounce'
     });
-    let mon = document.querySelector("#yMonth");
-    let yr  = document.querySelector("#yYear");
-    mon.addEventListener('change',check);
-    yr.addEventListener('change',check);
-    check();
-    function check(){
-      axios.post('/chartData',{
-        qMonth: mon.options[mon.selectedIndex].value,
-        qYear: parseInt(yr.options[yr.selectedIndex].value)
-      }).then((response)=>{
-        // console.log(response);
-        let obj = response.data;
-        var labelz = [];
-        var totalz = [];
-        for(var i = 0;i<obj.length;i++){
-          labelz.push("Window "+obj[i].win_no);
-          totalz.push(obj[i].qTotal);
-        }
-        var ctx = document.querySelector('#chartData').getContext('2d');
-        var config = {
-          type: 'bar',
-          data: {
-              labels: labelz,
-              datasets: [{
-                  label: "Month of "+mon.options[mon.selectedIndex].value,
-                  data: totalz,
-                  backgroundColor: '#1976d2',
-                  borderColor: '#1976d2'
-              }]
-          },
-          options: {
-              scales: {
-                  yAxes: [{
-                      ticks: {
-                          beginAtZero: true
-                      }
-                  }]
-              }
-          }
-        };
-        var myChart2 = new Chart(ctx,config);
-        myChart2.update({
-          duration: 800,
-          easing: 'easeOutBounce'
-        });
-      }).catch((error)=>{
-        console.log(error);
-      });
-    }
+    // EndCharJS //
     // let status = '{{status}}';
     // if(status!=''){
     //   M.toast({html: status})
