--- a/www/templates/admin.html
+++ b/www/templates/admin.html
@@ -28,42 +28,7 @@
 </head>
 <body>
     <header>
-        <div class="navbar-fixed">
-            <nav>
-            <div class="nav-wrapper white">
-                <a href="#!" class="brand-logo center green-text"><img src="{{ url_for('static',filename='assets/img/gcclogo.png') }}" alt="" style="height: 66px; width: 66px;" class="cirlcle responsive"></a>
-                <a href="#" data-target="slide-out" class="sidenav-trigger green-text"><i class="material-icons">menu</i></a>
-                <ul id="nav-mobile" class="left hide-on-med-and-down green-text">
-                    <li><a href="#" id="menu" class="green-text"><i class="material-icons green-text">menu</i></a></li>
-                </ul>
-            </div>
-            </nav>
-        </div>
-        <ul id="slide-out" class="sidenav sidenav-fixed green darken-2">
-            <li>
-            <div class="user-view">
-                <div class="background">
-                <img src="{{url_for('static',filename='assets/img/bg.jpg')}}" alt="" style="width:100%;">
-                </div>
-                <a href="#user"><img class="circle" src="{{ url_for('static',filename='assets/img/gcclogo.png')}}"></a>
-                <a href="#name"><span class="white-text name"></span></a>
-                <a href="#email"><span class="white-text email">{{session['userEmail']}}</span></a>
-            </div>
-            </li>
-            <!-- <ul class="collapsible">
-            <li>
-                <div class="collapsible-header">Home<i class="material-icons left">home</i></div>
-                <div class="collapsible-body"><span>jalsjfklsklfas;lfj</span></div>
-            </li>
-            </ul> -->
-            <li class="active"><a href="/admin" class="white-text">Home <i class="material-icons right white-text">home</i></a></li>
-            <li><a href="/admin_users" class="white-text">User Accounts <i class="material-icons right white-text">supervisor_account</i></a></li>
-            <li><a href="/admin_staff" class="white-text">Staff <i class="material-icons right white-text">assignment_ind</i></a></li>
-            <li><a href="/admin_dept" class="white-text">Department <i class="material-icons right white-text">business</i></a></li>
-            <li><a href="/admin_sett" class="white-text">Settings <i class="material-icons right white-text">settings</i></a></li>
-            <li><a href="/logout" class="white-text">Logout<i class="material-icons right white-text">logout</i></a></li>
-        </ul>
-        
+        {% include 'menu.html' %}        
     </header>
     <main>
       <div class="row">
@@ -75,8 +40,8 @@
         </div>
       </div>
     </main>
-    <footer>
-
+    <footer class="page-footer green">
+      {% include 'footer.html' %}
     </footer>
     <!-- MaterializeCSS -->
     <script src="{{ url_for('static',filename='assets/js/materialize-css.min.js')}}"></script>
