--- a/www/templates/admin/index.html
+++ b/www/templates/admin/index.html
@@ -42,7 +42,7 @@
       <center>
       <div class="container">
         <div class="z-depth-1 grey lighten-4 row" style="display: inline-block; padding: 32px 48px 0px 48px; border: 1px solid #EEE;">
-          <form class="col s12" method="post" action="/admin/admin/login">
+          <form class="col s12" method="post" action="/admin/login">
             <div class='row'>
               <div class='col s12'>
                 <h3 class="green-text">
