Fixes bugs and issues.

--- a/www/templates/404.html
+++ b/www/templates/404.html
@@ -20,7 +20,7 @@
       <div class="row">
         <h4 class="center"><i class="material-icons large red-text">warning</i></h4>
         <h4 class="red-text center">Page Not Found!</h4>
-        <p class="flow-text center">The Page you requested could not found!<br><a href="/" class="waves-effect waves-light btn">Return to Homepage</a></p>
+        <p class="flow-text center">The Page you requested could not found!<br><a href="/admin" class="waves-effect waves-light btn">Return to Homepage</a></p>
         
       </div>
     </main>
