--- a/www/templates/admin/staff.html
+++ b/www/templates/admin/staff.html
@@ -25,6 +25,34 @@
           padding-left: 0;
         }
       }
+      /* Modal */
+      .modal {
+    background-color: #fff;
+    &.modal-fixed-header {
+        padding: 0;
+        height: 70%;
+        .modal-header {
+            border-top: 1px solid rgba(0, 0, 0, 0.1);
+            position: absolute;
+            top: 0;
+        }
+        .modal-header {
+            border-radius: 0 0 2px 2px;
+            background-color: #fafafa;
+            padding: 4px 6px;
+            height: 56px;
+            width: 100%;
+        }
+        .modal-content {
+            position: absolute;
+            top:56px;
+            height: calc(100% - 56px);
+            max-height: 100%;
+            width: 100%;
+            overflow-y: auto;
+        }
+    }
+}
     </style>
 </head>
 <body>
@@ -38,7 +66,7 @@
                 <div class="table-header">
                 <span class="table-title">Staff</span>
                 <div class="actions">
-                    <a class="waves-effect waves-effect btn-flat modal-trigger nopadding" href="#dupdate"><i class="material-icons">delete</i></a>
+                    <a class="waves-effect waves-effect btn-flat modal-trigger nopadding" href="#mdelete"><i class="material-icons">delete</i></a>
                     <a href="/admin/addStaff" class="waves-effect btn-flat nopadding"><i class="material-icons">person_add</i></a>
                     <a href="#" class="search-toggle waves-effect btn-flat nopadding"><i class="material-icons">search</i></a>
                 </div>
@@ -97,17 +125,22 @@
                         <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
                     </div>
                 </div>
-                <div id="dupdate" class="modal">
-                    <div class="modal-content">
-                        <h4>Delete User Accounts</h4>
-                    </div>
-                    <div class="modal-footer">
-                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
-                    </div>
+                <div id="mdelete" class="modal modal-fixed-header">
+                  <div class="modal-header red-text">
+                    
+                  </div>
+                  <div class="modal-content center">
+                      <h1 class=""><i class="material-icons large red-text">cancel</i></h1>
+                      <h4 class="">Are you sure?</h4>
+                      <p class="">Do you want to delete these records? This cannot be undone!</p>
+                      <a href="#!" class="grey btn-large modal-close">Cancel</a>
+                      <a id="delBtn" class="btn-large red white-text">Delete</a>
+                  </div>
                 </div>
             </div>
         </div>
     </div>
+    
     </main>
     <footer class="page-footer green">
     {% include 'footer.html' %}
@@ -142,102 +175,56 @@
     M.AutoInit();
     // CheckBox
     let mChBx = document.querySelector("#mChBx");
-      let chBx = document.querySelectorAll(".chBx");
-      mChBx.addEventListener('click',function(){
-        if(mChBx.checked == true){
-          for (let i = 0; i < chBx.length; i++) {
-            chBx[i].checked = true;            
-          }
-        }else{
-          for (let i = 0; i < chBx.length; i++) {
-            chBx[i].checked = false;            
-          }
-        }
-      });
-      let check = (e)=>{
+    let chBx = document.querySelectorAll(".chBx");
+    mChBx.addEventListener('click',function(){
+      if(mChBx.checked == true){
         for (let i = 0; i < chBx.length; i++) {
-          if(chBx[i].checked == true){
-            console.log(chBx[i].dataset.id);
-          }          
+          chBx[i].checked = true;            
+        }
+      }else{
+        for (let i = 0; i < chBx.length; i++) {
+          chBx[i].checked = false;            
         }
       }
-    // Municipality ChangeEvent
-    let mun = document.querySelector("#citymunCode");
-    mun.addEventListener('change',()=>{
-        axios.post('/admin/barangay',{
-            citymunCode: mun.options[mun.selectedIndex].value
-        }).then((response)=>{
-            let obj = response.data;
-            let barangay = document.querySelector("#brgyCode");
-            barangay.M_FormSelect.$selectOptions.empty();
-            barangay.M_FormSelect.$selectOptions.remove();
-            for (let i = 0; i < obj.length; i++) {
-                console.log(obj[i].brgyDesc);
-                let opt = document.createElement("option");
-                opt.text = obj[i].brgyDesc;
-                opt.value = obj[i].brgyCode;
-                barangay.options.add(opt);
-            }
-            // Load Form Select MaterializeCSS
-            var elems = document.querySelectorAll('select');
-            M.FormSelect.init(elems);
-        }).catch((error)=>{
-            console.log(error)
-        })
-    })
-    // Province ChangeEvent
-    let prov = document.querySelector("#provCode");
-    prov.addEventListener('change',()=>{
-        axios.post('/admin/municipality',{
-            provCode:prov.options[prov.selectedIndex].value
-        }).then((response)=>{
-            let obj = response.data;
-            let municipality = document.querySelector("#citymunCode");
-            municipality.M_FormSelect.$selectOptions.empty();
-            municipality.M_FormSelect.$selectOptions.remove();
-            for (let i = 0; i < obj.length; i++) {
-                console.log(obj[i].citymunDesc);
-                let opt = document.createElement("option");
-                opt.text = obj[i].citymunDesc;
-                opt.value = obj[i].citymunCode;
-                municipality.options.add(opt); 
-            }
-            // Load Form Select MaterializeCSS
-            var elems = document.querySelectorAll('select');
-            M.FormSelect.init(elems);
-        }).catch((error)=>{
-            console.log(error);
-        })
-    })
-
-    //  
-    // Region ChangeEvent
-    let reg = document.querySelector("#regCode");
-    reg.addEventListener('change',function(){
-        axios.post('/admin/province',{
-            regCode: reg.options[reg.selectedIndex].value
-        }).then((response)=>{
-            // console.log(response);
-            let obj = response.data;
-            let province = document.querySelector("#provCode");
-            province.M_FormSelect.$selectOptions.empty();
-            province.M_FormSelect.$selectOptions.remove();
-            for(let i=0;i<obj.length;i++){
-                console.log(obj[i].provDesc);
-                let opt = document.createElement("option");
-                opt.text = obj[i].provDesc;
-                opt.value = obj[i].provCode;
-                province.options.add(opt);    
-            }
-            province.M_FormSelect.onchange;
-            // Load Form Select MaterializeCSS
-            var elems = document.querySelectorAll('select');
-            M.FormSelect.init(elems);
-        }).catch((error)=>{
-            console.log(error);
-        });
-    })
+    });
     // 
+    // Delete Button
+    let dbtn = document.querySelector("#delBtn");
+    let modal = document.querySelectorAll(".modal");
+    dbtn.addEventListener("click",()=>{
+      let delData = [];
+      let check = (e)=>{
+          for (let i = 0; i < chBx.length; i++) {
+              if(chBx[i].checked == true){
+                  delData.push(chBx[i].dataset.id);
+              }                
+          }
+      }
+      check();
+      if(delData.length==0){
+        M.toast({html:'Please check something!'});
+        modal[1].M_Modal.close();
+      }else{
+        axios.post('/admin/delSA',{
+          delData: delData
+        }).then((response)=>{
+          if(response.data.status=='ok'){
+            location.reload(true)
+          }
+        }).catch((error)=>{
+          console.log(error)
+        })
+      }
+    });
     </script>
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+        {% for message in messages %}
+        <script>
+          M.toast({html:'{{message}}'})
+        </script>
+        {% endfor %}
+      {% endif %}
+    {% endwith %}
 </body>
 </html>
