--- a/www/templates/admin/admin.html
+++ b/www/templates/admin/admin.html
@@ -15,6 +15,7 @@
     <!-- ChartJS -->
     <link rel="stylesheet" href="{{ url_for('static',filename='assets/css/Chart.min.css')}}">
     <style>
+      #mapid { height: 180px; }
       header, main, footer {
         padding-left: 300px;
       }
