--- a/www/templates/admin/staff.html
+++ b/www/templates/admin/staff.html
@@ -14,8 +14,8 @@
     <link rel="stylesheet" href="{{ url_for('static',filename='assets/css/materializecss-icons.css')}}">
     <!-- jQueryMaterializeCSS -->
     <link rel="stylesheet" href="{{ url_for('static',filename='assets/css/jq-data-material.css')}}">
-    
     <style>
+      #mapid { height: 180px; }
       header, main, footer {
         padding-left: 300px;
       }
